[gd_scene load_steps=13 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://World/Levels/Level.gd" type="Script" id=2]
[ext_resource path="res://World/Scenes/Floor.tscn" type="PackedScene" id=3]
[ext_resource path="res://World/Elevator.tscn" type="PackedScene" id=4]
[ext_resource path="res://Player.png" type="Texture" id=5]
[ext_resource path="res://CameraShader.tres" type="Shader" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 33.0
height = 36.0

[sub_resource type="CircleShape2D" id=2]

[sub_resource type="ShaderMaterial" id=25]
shader = ExtResource( 6 )
shader_param/fade = 0.5
shader_param/wavyEffect = 1.0
shader_param/wavyEffectPosition = Vector2( 0, 0 )

[sub_resource type="Animation" id=28]
resource_name = "FadeIn"
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D/CanvasLayer/ScreenEffect:material:shader_param/fade")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.5, 1.0 ]
}

[sub_resource type="Animation" id=26]
resource_name = "FadeOut"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D/CanvasLayer/ScreenEffect:material:shader_param/fade")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.5 ]
}

[sub_resource type="Animation" id=27]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D/CanvasLayer/ScreenEffect:material:shader_param/fade")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.5 ]
}

[node name="Level" type="Node"]
script = ExtResource( 2 )
nextLevel = 2

[node name="Background" parent="." instance=ExtResource( 3 )]

[node name="StartElevator" parent="." instance=ExtResource( 4 )]

[node name="EndElevator" parent="." instance=ExtResource( 4 )]
position = Vector2( 372, 144 )

[node name="DoorArea" type="Area2D" parent="EndElevator"]

[node name="DoorShape" type="CollisionShape2D" parent="EndElevator/DoorArea"]
position = Vector2( -16, 24 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="EndArea" type="Area2D" parent="EndElevator"]

[node name="EndShape" type="CollisionShape2D" parent="EndElevator/EndArea"]
position = Vector2( -25, -33 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
current = true
smoothing_enabled = true
smoothing_speed = 7.0

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D"]

[node name="ScreenEffect" type="ColorRect" parent="Camera2D/CanvasLayer"]
material = SubResource( 25 )
margin_right = 256.0
margin_bottom = 192.0
__meta__ = {
"_edit_lock_": true
}

[node name="Health" type="Sprite" parent="Camera2D/CanvasLayer"]
position = Vector2( 2, 2 )
texture = ExtResource( 5 )
centered = false
region_enabled = true
region_rect = Rect2( 1, 97, 19, 6 )
__meta__ = {
"_edit_group_": true
}

[node name="Characters" type="YSort" parent="."]

[node name="Player" parent="Characters" instance=ExtResource( 1 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeIn = SubResource( 28 )
anims/FadeOut = SubResource( 26 )
anims/RESET = SubResource( 27 )

[connection signal="body_entered" from="EndElevator/DoorArea" to="." method="_on_DoorArea_body_entered"]
[connection signal="body_exited" from="EndElevator/DoorArea" to="." method="_on_DoorArea_body_exited"]
[connection signal="body_entered" from="EndElevator/EndArea" to="." method="_on_EndArea_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
